# quant-task

./: .gitignore  Cargo.toml  DOCKER_SETUP_MINIMAL.md  Dockerfile  README.md  docker-compose.yml  setup-script.sh  snapshot.json  snapshots.jsonl  start.sh
py-server/: server.py  server.py.bak
react-client-for-api/my-react-app/: package-lock.json
react-client-for-api/my-react-app/src/: App.jsx
react-client-for-api/my-react-app/src/visual/: OrderBook.jsx
src/: main.rs
src/dbn/: dbn_local.rs  mod.rs
src/types/: msg.rs
