[package]
name = "hft-task"
version = "0.1.0"
edition = "2021"

[dependencies]
dbn = "0.44"
fallible-streaming-iterator = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }